Fixes workspace vertical scrollbar issue in #1975

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,6 @@
     box-sizing: border-box;
     left: 0;
     margin: 0;
-    overflow: scroll;
     position: absolute;
     right: 0;
     top: 0;
